1. Метод .of [#333043]