@@ -5,6 +5,7 @@ import org.junit.Test;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
 
@@ -12,11 +13,12 @@ public class ConvertListTest {
 
     @Test
     public void whenTwoList() {
-        List<int[]> list = new ArrayList<>();
+        List<int[]> list = List.of(
+                new int[]{1, 2},
+                new int[]{3, 4}
+        );
         ConvertList convertList = new ConvertList();
-        list.add(new int[] {1, 2});
-        list.add(new int[] {3, 4});
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4);
+        List<Integer> expected = List.of(1, 2, 3, 4);
         assertThat(convertList.convert(list), is(expected));
     }
 
